--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     ],
     "require": {
         "php": ">=5.6",
-        "symfony/framework-bundle": "~2.0|^3.0",
-        "sensio/generator-bundle": "~2.3|~3.0",
-        "modera/module": "~1.0|~2.0"
+        "symfony/framework-bundle": "~2.8|^3.0",
+        "sensio/generator-bundle": "~3.0",
+        "modera/module": "~1.2"
     },
     "require-dev": {
         "phake/phake": "~2.0",
