--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=5.6",
         "symfony/framework-bundle": "~2.8|^3.0",
         "sensio/generator-bundle": "~3.0",
-        "modera/module": "~1.2"
+        "modera/module": "^1.3"
     },
     "require-dev": {
         "phake/phake": "~2.0",
