--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,10 @@
     ],
     "require": {
         "php": ">=5.6",
-        "symfony/framework-bundle": "~2.8|^3.0",
-        "sensio/generator-bundle": "~3.0",
-        "modera/module": "^1.3"
+        "symfony/framework-bundle": "^3.4|^4.0"
     },
     "require-dev": {
-        "phake/phake": "~2.0",
+        "phake/phake": "^2.0",
         "phpunit/phpunit": "^5.5"
     },
     "autoload": {
