--- a/composer.json
+++ b/composer.json
@@ -14,20 +14,19 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "symfony/framework-bundle": "^3.4|^4.0"
+        "php": ">=7.4",
+        "symfony/framework-bundle": "^4.4|^5.0"
     },
     "require-dev": {
-        "phake/phake": "^2.0",
-        "phpunit/phpunit": "^5.5"
+        "phake/phake": "^4.0",
+        "phpunit/phpunit": "^6.5"
     },
     "autoload": {
-        "psr-0": { "Modera\\ModuleBundle": "" }
+        "psr-4": { "Modera\\ModuleBundle\\": "" }
     },
-    "target-dir": "Modera/ModuleBundle",
     "extra": {
         "branch-alias": {
-            "dev-master": "3.x-dev"
+            "dev-master": "4.x-dev"
         }
     }
 }
